--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
         "@babel/core": "^7.6.0",
         "babel-preset-es2015": "^6.24.1",
         "browserify": "^14.3.0",
-        "gulp": "^3.9.1",
+        "gulp": "^4.0.2",
         "gulp-babel": "^8.0.0",
         "gulp-concat": "^2.6.1",
+        "gulp-inject-string": "^1.1.2",
         "gulp-minify": "^3.1.0",
         "gulp-string-replace": "^1.1.2",
         "gulp-typescript": "^3.1.6",
@@ -31,7 +32,6 @@
         "tsify": "^3.0.1",
         "typescript": "^2.2.2",
         "vinyl-source-stream": "^1.1.0",
-        "watchify": "^3.9.0",
-        "gulp-inject-string": "^1.1.2"
+        "watchify": "^3.9.0"
     }
 }
