--- a/package.json
+++ b/package.json
@@ -32,11 +32,7 @@
         "tsify": "^3.0.1",
         "typescript": "^2.2.2",
         "vinyl-source-stream": "^1.1.0",
-        "watchify": "^3.9.0",
-        "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "watchify": "^3.9.0"
     },
-    "dependencies": {
-        "shifty": "^2.19.1"
-    }
+    "dependencies": {}
 }
